--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Header Section -->
     <header class="header">
-        <h1 class="title">Deep Spectre AI</h1>
+        <h1 class="title">Deep DL Spectre </h1>
         <nav class="nav-bar">
             <a href="#" class="nav-item">Home</a>
             <a href="#about" class="nav-item">About</a>
@@ -39,10 +39,10 @@
                 <section id="about" class="section">
                         <h2>$HYDDEN to Deep Spectre</h2>
                         <p>
-                          <a href="https://x.com/Deep_spectre" target="_blank">Twitter</a>
+                          <a href="https://x.com/SpectreDotfun" target="_blank">Twitter</a>
                         </p>
                         <p>
-                          <a href="https://t.me/deepspectre" target="_blank">Telegram</a>
+                          <a href="https://t.me/Deepdlspectre" target="_blank">Telegram</a>
                         </p>
                     <p> hidden layers of data where AI reveals what’s not immediately visible. Discover patterns and insights that aren't easily found. Are you ready to see beyond the surface?</p>
                 </section>
