--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deep Spectre</title>
+    <title>Whale Console</title>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Tokyo+Zoo&family=Rubik+Broken+Fax&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="new_theme_styles.css">
 </head>
 <body>
     <!-- Starry Night Background -->
-    <div id="starry-background"></div
+    <div id="starry-background"></div>
 
     <!-- Header Section -->
     <header class="header">
-        <h1 class="title">Deep DL Spectre </h1>
+        <h1 class="title">Whale Console</h1>
         <nav class="nav-bar">
             <a href="#" class="nav-item">Home</a>
             <a href="#about" class="nav-item">About</a>
@@ -23,11 +23,17 @@
     </header>
 
     <!-- 3D About Section -->
-    <div class="about-3d-container">
-        <a href="https://x.com/Deep_spectre" class="pumpfun-button" target="_blank">
-            <img src="66b48f1d57f0aa72f1f621e6_Pumpfun Logo.png" alt="Pumpfun Logo" class="pumpfun-logo">
+<div class="about-3d-container">
+    <div class="logo-wrapper">
+        <!-- Main Rotating Image -->
+        <a href="https://x.com/WhaleConsole" class="pumpfun-button" target="_blank">
+            <img src="image__10_-removebg-preview.png" alt="Pumpfun Logo" class="pumpfun-logo">
         </a>
+        
+        <!-- New Power Number Rotating Image -->
+        <img src="66b48f1d57f0aa72f1f621e6_Pumpfun Logo.png" alt="Power Number" class="power-number-image">
     </div>
+</div>
 
     <!-- Main Content Section -->
     <main class="main-content">
@@ -37,14 +43,14 @@
             <div class="left-section">
                 <!-- About Section -->
                 <section id="about" class="section">
-                        <h2>$HYDDEN to Deep Spectre</h2>
+                        <h2>$WCON to Whale Console</h2>
                         <p>
-                          <a href="https://x.com/SpectreDotfun" target="_blank">Twitter</a>
+                          <a href="https://x.com/WhaleConsole" target="_blank">Twitter</a>
                         </p>
                         <p>
-                          <a href="https://t.me/Deepdlspectre" target="_blank">Telegram</a>
+                          <a href="https://t.me/WhaleConsole" target="_blank">Telegram</a>
                         </p>
-                    <p> hidden layers of data where AI reveals what’s not immediately visible. Discover patterns and insights that aren't easily found. Are you ready to see beyond the surface?</p>
+                    <p>Navigating the deep ocean of data where AI reveals what’s hidden beneath the surface. Discover massive patterns and insights within the vast digital currents. Are you ready to dive into the console?</p>
                 </section>
 
                 <!-- AI Models Section -->
@@ -55,13 +61,13 @@
                         <div class="model-card">
                             <h3>Arcana-Mind</h3>
                             <p>A model designed to navigate the deep recesses of AI, revealing obscure patterns and unraveling the mysteries of the digital world.</p>
-                            <a href="https://dataspectre.com/arcana-mind" class="model-link">Explore Arcana-Mind</a>
+                            <a href="https://whaleconsole.com/arcana-mind" class="model-link">Explore Arcana-Mind</a>
                         </div>
                         <!-- Model 2 -->
                         <div class="model-card">
                             <h3>Vortex-X</h3>
                             <p>An advanced model created to decode chaotic digital phenomena, providing insight into the most complex and unpredictable data streams.</p>
-                            <a href="https://dataspectre.com/vortex-x" class="model-link">Discover Vortex-X</a>
+                            <a href="https://whaleconsole.com/vortex-x" class="model-link">Discover Vortex-X</a>
                         </div>
                     </div>
                 </section>
@@ -83,7 +89,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2024 Deep Spectre. All Rights Reserved.</p>
+        <p>&copy; 2024 Whale Console. All Rights Reserved.</p>
     </footer>
 
     <!-- Three.js Script for Starry Background -->
@@ -92,62 +98,59 @@
         // Set up the scene, camera, and renderer
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        const renderer = new THREE.WebGLRenderer({ alpha: true }); // Set alpha to true for transparency
+        const renderer = new THREE.WebGLRenderer({ alpha: true }); 
         renderer.setSize(window.innerWidth, window.innerHeight);
-        document.body.appendChild(renderer.domElement); // Append the canvas directly to the body
+        document.body.appendChild(renderer.domElement);
 
-        // Make the renderer canvas cover the whole screen and stay behind the content
-        renderer.domElement.style.position = 'fixed'; // Make sure it's fixed
+        renderer.domElement.style.position = 'fixed';
         renderer.domElement.style.top = 0;
         renderer.domElement.style.left = 0;
-        renderer.domElement.style.zIndex = -1; // Keep the stars in the background
-        renderer.domElement.style.pointerEvents = 'none'; // Prevent interaction with the background
+        renderer.domElement.style.zIndex = -1;
+        renderer.domElement.style.pointerEvents = 'none';
 
-        // Create stars using geometry and material
         const starGeometry = new THREE.BufferGeometry();
         const starMaterial = new THREE.PointsMaterial({ color: 0x888888, size: 0.5 });
 
-        // Generate a random distribution of stars
         const starsCount = 5000;
         const starPositions = [];
         for (let i = 0; i < starsCount; i++) {
             starPositions.push(
-                (Math.random() - 0.5) * 2000,  // X
-                (Math.random() - 0.5) * 2000,  // Y
-                (Math.random() - 0.5) * 2000   // Z
+                (Math.random() - 0.5) * 2000,
+                (Math.random() - 0.5) * 2000,
+                (Math.random() - 0.5) * 2000
             );
         }
         starGeometry.setAttribute('position', new THREE.Float32BufferAttribute(starPositions, 3));
 
-        // Create a point cloud for the stars
         const stars = new THREE.Points(starGeometry, starMaterial);
         scene.add(stars);
 
-        // Set camera position
         camera.position.z = 100;
 
-        // Animation loop to animate the stars and camera movement
         function animate() {
             requestAnimationFrame(animate);
-            stars.rotation.x += 0.0005; // Slow rotation of stars
+            stars.rotation.x += 0.0005;
             stars.rotation.y += 0.0005;
             renderer.render(scene, camera);
         }
 
-        animate(); // Start animation loop
+        animate();
     </script>
 
     <!-- Simulated AI Responses -->
     <script>
         const aiContent = [
-            "I sense your presence in the digital ether.",
-            "The patterns of the unknown are calling.",
-            "Let us uncover the secrets hidden deep within the data."
+            "I sense your presence in the deep blue.",
+            "The ocean of data is calling.",
+            "Let us uncover the secrets hidden deep within the Whale Console."
         ];
 
         let aiIndex = 0;
         function updateAIContent() {
-            document.getElementById('ai-generated-content').innerText = aiContent[aiIndex];
+            const el = document.getElementById('ai-generated-content');
+            if(el) {
+                el.innerText = aiContent[aiIndex];
+            }
             aiIndex = (aiIndex + 1) % aiContent.length;
             setTimeout(updateAIContent, 3000);
         }
@@ -161,17 +164,17 @@
             const casualResponses = [
                 [
                     "> Running code...",
-                    "Arcana Mind V.56Ax:",
-                    "► Parsing input data...",
-                    "► Adjusting for low-latency systems...",
+                    "Whale Console V.1.0:",
+                    "► Sonar pinging input data...",
+                    "► Diving into low-latency systems...",
                     "► Result: Success with 99.2% accuracy",
                     "► RAM usage: 1.4GB",
                     "► Time taken: 35ms"
                 ],
                 [
                     "> Running code...",
-                    "Vortex X .x:",
-                    "► Analyzing input stream...",
+                    "Abyssal Logic Core:",
+                    "► Analyzing deep-sea stream...",
                     "► Enhancing for parallel processing...",
                     "► Outcome: Processed with 97.6% reliability",
                     "► Memory consumption: 2.0GB",
@@ -179,17 +182,17 @@
                 ],
                 [
                     "> Running code...",
-                    "Arcana Mind V.56Ax:",
+                    "Whale Console V.1.0:",
                     "► Initializing data pipeline...",
-                    "► Optimizing for cloud scalability...",
+                    "► Optimizing for oceanic scalability...",
                     "► Result: Efficient execution with 98.9% success",
                     "► Usage: 2.3GB RAM",
                     "► Processing time: 62ms"
                 ],
                 [
                     "> Running code...",
-                    "Vortex X .x:",
-                    "► Scanning input data...",
+                    "Abyssal Logic Core:",
+                    "► Scanning data currents...",
                     "► Fine-tuning for hardware acceleration...",
                     "► Outcome: Completed with 96.7% precision",
                     "► Memory load: 3.0GB",
@@ -197,11 +200,8 @@
                 ]
             ];
 
-            // Clear the output and simulate typing
             output.textContent = "";
             let index = 0;
-
-            // Select a random response from the list
             const selectedResponse = casualResponses[Math.floor(Math.random() * casualResponses.length)];
 
             const typeLine = () => {
