--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
                 <section id="about" class="section">
                         <h2>$WCON to Whale Console</h2>
                         <p>
-                          <a href="https://x.com/WhaleConsole" target="_blank">Twitter</a>
+                          <a href="https://x.com/WhaleConsole" target="_blank">Twitter / X</a>
                         </p>
                         <p>
-                          <a href="https://t.me/WhaleConsole" target="_blank">Telegram</a>
                         </p>
                     <p>Navigating the deep ocean of data where AI reveals what’s hidden beneath the surface. Discover massive patterns and insights within the vast digital currents. Are you ready to dive into the console?</p>
                 </section>
@@ -217,4 +216,5 @@
     </script>
 
 </body>
+
 </html>
